api call success

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 //    compile 'io.reactivex.rxjava:rxjava:2.0.3'
-    def retrofit_version = '2.0.2'
+    def retrofit_version = '2.1.0'
     compile "com.squareup.retrofit2:retrofit:${retrofit_version}"
     compile "com.squareup.retrofit2:adapter-rxjava:${retrofit_version}"
     compile "com.squareup.retrofit2:converter-gson:${retrofit_version}"
+    compile "com.squareup.retrofit2:retrofit-converters:${retrofit_version}"
+    compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+
 }
 
